<resources>
    <string name="app_name">Crown Watches</string>
    <string name="app_logo">App Logo</string>
    <string name="welcome_title">Enjoy\nYour Time</string>
    <string name="get_started">Get Started</string>
    <string name="watch_image_description">Watch Image</string>
    <string name="crown_watches_logo">Crown Watches Logo</string>
    <string name="register_title">Register</string>
    <string name="full_name_hint">Full Name :</string>
    <string name="full_name_icon">Full Name Icon</string>
    <string name="email_hint">Email :</string>
    <string name="email_icon">Email Icon</string>
    <string name="mobile_hint">Mobile No :</string>
    <string name="mobile_icon">Mobile Icon</string>
    <string name="password_hint">password :</string>
    <string name="password_icon">Password Icon</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="privacy_policy">I agree to the Privacy Policy &amp; Terms &amp; Condition</string>
    <string name="register_button">Register</string>
    <string name="google_login">Google Login</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="apple_login">Apple Login</string>
    <string name="have_account_part1">Already have an account?</string>
    <string name="login_link">Login here</string>
    <string name="login_title">Login</string>
    <string name="login_email_hint">Email :</string>
    <string name="login_password_hint">Password :</string>
    <string name="remember_me">Remember me</string>
    <string name="login_button">Login</string>
    <string name="no_account_part1">Don\'t have an account?</string>
    <string name="register_link">Register here</string>
    <string name="reset_password_title">Reset password</string>
    <string name="reset_mobile_hint">Mobile No :</string>
    <string name="reset_otp_hint">otp :</string>
    <string name="send_button">Send</string>
    <string name="otp_icon">OTP Icon</string>
    <string name="reset_button">Reset</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="search_hint">Search</string>
    <string name="search_icon">Search Icon</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="men_category">Men</string>
    <string name="women_category">Women</string>
    <string name="kids_category">Kids</string>
    <string name="sale_category">Sale</string>
    <string name="special_offer_title">Special Offer\nfor March</string>
    <string name="special_offer_desc">We are here with the best deserts intown.</string>
    <string name="buy_now">Buy Now</string>
    <string name="product_image">Product Watch</string>
    <string name="product_name">Men Watch</string>
    <string name="product_description">Premium Quality Watch</string>
    <string name="product_price">$ 20.00</string>
    <string name="product_rating">3.8</string>
    <string name="add_symbol">+</string>
    <string name="favorite_icon">Favorite Icon</string>
    <string name="star_icon">Star Icon</string>
    <string name="nav_home">Home</string>
    <string name="nav_shop">Shop</string>
    <string name="nav_search">Search</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_profile">Profile</string>
</resources>